# ab_utilization

./: ab_method_tests.ipynb  bandits.ipynb  mm_ab.py  mm_base.py  pyproject.toml  readme.md  real_case_example.ipynb
notebooks/: ab_method_tests.ipynb  causal.ipynb  ml_vs_ab.ipynb  mm_ab.py  real_case_example.ipynb  sequentional_testing.ipynb  user_vs_click.ipynb
webmorda/: ab_funcs.py  webmorda.py
