[tool.poetry]
name = "ab_utilization"
version = "0.1.0"
description = "Crash test of AB methods"
authors = ["Charubaiel <alexandrin.a@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<=3.10"
pandas = "^1.4.3"
numpy = "^1.23.1"
statsmodels = "^0.13.2"
scipy = "^1.9.0"
matplotlib = "^3.5.2"
sklearn = "^0.0"
lightgbm = "^3.3.2"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
streamlit = "^1.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
